[package]
name = "booksworm"
version = "0.1.0"
edition = "2021"
authors = ["Burak Selim Senyurt<burakselimsenyurt@gmail.com>"]
description = "RUST Wasm ile yazılmış basit bir form uygulaması"

[dependencies]
wasm-bindgen = "0.2.80"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[lib]
crate-type = ["cdylib"]
