[workspace]
resolver="2"

members = [
    "medium/clock",
    "easy/gigasecond",
    "easy/reverse_string",
    "easy/armstrong_numbers",
    "medium/anagram",
    "medium/space_age",
    "medium/sublist",
    "medium/minesweeper",
    "medium/luhn",
    "hard/parallel_letter_frequency",
    "hard/macros"
]
