[workspace]
resolver="2"

members = [
    "medium/clock",
    "easy/gigasecond",
    "easy/reverse_string",
    "easy/armstrong_numbers",
    "easy/beer_song",
    "easy/difference_of_square",
    "easy/grains",
    "easy/leap",
    "easy/nth_prime",
    "medium/anagram",
    "medium/space_age",
    "medium/sublist",
    "medium/minesweeper",
    "medium/luhn",
    "hard/parallel_letter_frequency",
    "hard/macros"
]
