[workspace]
resolver="2"

members = [
    "medium/clock",
    "easy/gigasecond",
    "easy/reverse_string",
    "easy/armstrong_numbers",
    "easy/beer_song",
    "easy/difference_of_square",
    "easy/grains",
    "easy/leap",
    "easy/nth_prime",
    "easy/bob",
    "easy/matching_brackets",
    "easy/prime_factors",
    "easy/raindrops",
    "easy/collatz_conjecture",
    "medium/anagram",
    "medium/space_age",
    "medium/sublist",
    "medium/minesweeper",
    "medium/luhn",
    "medium/perfect_numbers",
    "medium/say",
    "medium/allergies",
    "medium/rna_transcription",
    "hard/parallel_letter_frequency",
    "hard/macros"
]
