[package]
name = "hello-wasm"
version = "0.1.0"
description = "Basit bir WASM uygulaması"
authors = ["buraksenyurt <burakselimsenyurt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.80"

console_error_panic_hook = { version = "0.1.7", optional = true }

wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[profile.release]
opt-level = "s"
