[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# library'ler için log paketi yeterlidir
log="0.4.14"
# ancak executable programlarda log'un dışarıya çıkartılması gerekir.
# log paketinin farklı implementasyonları bu amaçla kullanılır.
# örneğin env_logger.
env_logger = "0.9.0"