[package]
name = "mockito_101"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version="0.14.25", features=["full"]}
lazy_static = "1.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
surf = "2.3.2"
tokio = {version="1.27.0",features=["full"]}
wiremock = "0.5.18"
