[package]
name = "notes-server"
version = "0.1.0"
edition = "2021"
description = "A tiny notes server"
authors = ["Burak Selim Şenyurt"]

[dependencies]
handlebars = "5.1.2"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.6"
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
