[package]
name = "notes-server"
version = "0.1.0"
edition = "2021"
description = "A tiny notes server"
authors = ["Burak Selim Şenyurt"]

[dependencies]
handlebars = "6.4.0"
rand = "0.10.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
