[package]
name = "packman"
description = "packman benzeri bir oyun programı denemesidir"
keywords=["game development","bracket library","rust"]
authors = ["Burak Selim Şenyurt<selim@buraksenyurt.com>"]
version = "0.2.0"
repository = "https://github.com/buraksenyurt/rust-farm/tree/main/Practices/packman"
edition = "2021"

[dependencies]
bracket-lib = "~0.8.1"
log="~0.4.16"
env_logger = "~0.9.0"
