[package]
name = "surrealdb-intro"
version = "0.1.0"
edition = "2021"
description = "SurrealDb ile çalışmak"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
