[package]
name = "bookshop-grpc-service"
description = "Basit bir gRPC servis kullanımı örneği"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.8"
rand = "0.8.5"
serde_json = "1.0.94"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tonic-reflection = "0.6.0"

[build-dependencies]
tonic-build = "0.8.4"
