[package]
name = "gamestore"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"] }
sea-orm-migration = "0.11.3"
