[package]
name = "running_rectangle"
version = "0.1.0"
edition = "2021"
description = "A simple rectangle movement system written with rust and wasm"
authors = ["Burak Selim Şenyurt"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.14", features = ["js"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Document", "HtmlElement", "Window", "Element", "CssStyleDeclaration"] }