[package]
name = "states-on-wasm"
version = "0.1.0"
edition = "2021"
description = "State usages on wasm based games"

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Document", "HtmlElement", "Window", "Element", "CssStyleDeclaration"] }

[lib]
crate-type = ["cdylib"]