[package]
name = "teng"
version = "0.1.0"
edition = "2021"
description = "Raporlama aracı yazmaya çalışan bir Selim çizelim buraya"
authors = ["Burak Selim Şenyurt"]

[dependencies]
axum = "0.7.9"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
