[package]
name = "use-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.70"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
