[package]
name = "boringtodo"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.23"
thiserror = "1.0.32"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
warp = "0.3.2"
sqlx = { version = "0.6.1", features = [ "runtime-tokio-rustls", "postgres" ] }
sqlb = "0.0.8"

[dev-dependencies]
anyhow = "1.0.62"