[package]
name = "planner"
authors=["Burak Selim Senyurt"]
description="Bir web uygulamasının nasıl geliştirildiğini öğrenmek amacıyla yazılan projedir."
version = "0.1.0"
edition = "2021"

[dependencies]
log="0.4.14"
env_logger = "0.9.0"
serde_json={version="1.0.79",default-features=false,features=["alloc"]}
