[package]
name = "wi_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = { version = "4.5.1",features = ["openssl"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
rusqlite = "0.31.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
shared = {path="../shared"}
openssl = { version = "0.10.64", features = ["v110"] }
rustls = "0.23.7"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.61"
