[package]
name = "can-ban"
version = "0.1.0"
edition = "2021"
description = "A tiny kanban board sample with rust and wasm"
authors = ["Burak Selim Åenyurt"]

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
shared = {path="../shared"}
