[package]
name = "almanac_api"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }
tokio = {workspace = true}
serde = { workspace = true }
serde_json = {workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
testcontainers = { workspace = true }
axum = {workspace = true}
dotenv = "0.15.0"
almanac_data = { path = "../almanac_data" }
almanac_common = {path = "../almanac_common"}

[dependencies.sea-orm-migration]
version = "^0"
features = ["runtime-tokio-rustls","sqlx-postgres"]

